force-app/main/default/objects/EI_Space_Location__c/EI_Space_Location__c.object-meta.xml
<CustomObject>
    <description>The space or location within a master metered premise.</description>
    <label>Space and Location</label>
    <nameField>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>Space and Location</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Spaces and Locations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>