force-app/main/default/objects/EI_Space_Location__c/fields/Care_Enrolled_EI__c.field-meta.xml
<CustomField>
    <fullName>Care_Enrolled_EI__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if the location is enrolled in the Care program.</description>
    <inlineHelpText>Check if the location is enrolled in the Care program.</inlineHelpText>
    <label>Care Enrolled</label>
    <type>Checkbox</type>
</CustomField>