force-app/main/default/objects/EI_Space_Location__c/fields/Care_Facility_Name__c.field-meta.xml
<CustomField>
    <fullName>Care_Facility_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Care Facility Name</label>
    <referenceTo>CARE_Facility__c</referenceTo>
    <relationshipLabel>Spaces and Locations</relationshipLabel>
    <relationshipName>Spaces_and_Locations</relationshipName>
    <type>Lookup</type>
</CustomField>