force-app/main/default/objects/EI_Space_Location__c/fields/City_EI__c.field-meta.xml
<CustomField>
    <fullName>City_EI__c</fullName>
    <description>City of the space / location.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>City of the space / location.</inlineHelpText>
    <label>City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>