force-app/main/default/objects/EI_Space_Location__c/fields/Contact_First_Name_EI__c.field-meta.xml
<CustomField>
    <fullName>Contact_First_Name_EI__c</fullName>
    <description>Contact First Name.</description>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <inlineHelpText>Contact First Name.</inlineHelpText>
    <label>Contact First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>