force-app/main/default/objects/EI_Space_Location__c/fields/Contact_Last_Name_EI__c.field-meta.xml
<CustomField>
    <fullName>Contact_Last_Name_EI__c</fullName>
    <description>Contact Last Name.</description>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <inlineHelpText>Contact Last Name.</inlineHelpText>
    <label>Contact Last Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>