force-app/main/default/objects/EI_Space_Location__c/fields/EI_Old_Id_DM__c.field-meta.xml
<CustomField>
    <fullName>EI_Old_Id_DM__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Old Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>