force-app/main/default/objects/EI_Space_Location__c/fields/ExternalID_EI__c.field-meta.xml
<CustomField>
    <fullName>ExternalID_EI__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>ExternalID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>