force-app/main/default/objects/EI_Space_Location__c/fields/Facility_Electric_SA__c.field-meta.xml
<CustomField>
    <fullName>Facility_Electric_SA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facility Electric SA</label>
    <referenceTo>CARE_Facility_Enrolled_SA__c</referenceTo>
    <relationshipLabel>Spaces and Locations - Electric</relationshipLabel>
    <relationshipName>Spaces_and_Locations</relationshipName>
    <type>Lookup</type>
</CustomField>