force-app/main/default/objects/EI_Space_Location__c/fields/Facility_Gas_SA__c.field-meta.xml
<CustomField>
    <fullName>Facility_Gas_SA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facility Gas SA</label>
    <referenceTo>CARE_Facility_Enrolled_SA__c</referenceTo>
    <relationshipLabel>Spaces and Locations (Facility Gas SA)</relationshipLabel>
    <relationshipName>Spaces_and_Locations_Gas</relationshipName>
    <type>Lookup</type>
</CustomField>