force-app/main/default/objects/EI_Space_Location__c/fields/Last_ESA_Enrollment_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_ESA_Enrollment_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last ESA Enrollment Date</label>
    <type>Date</type>
</CustomField>