force-app/main/default/objects/EI_Space_Location__c/fields/Last_Treated_Date_EI__c.field-meta.xml
<CustomField>
    <fullName>Last_Treated_Date_EI__c</fullName>
    <description>last date the space or location was treated with an ESA program.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>last date the space or location was treated with an ESA program.</inlineHelpText>
    <label>Last Treated Date</label>
    <type>Date</type>
</CustomField>