force-app/main/default/objects/EI_Space_Location__c/fields/Phone_EI__c.field-meta.xml
<CustomField>
    <fullName>Phone_EI__c</fullName>
    <description>Primary phone number.</description>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <inlineHelpText>Primary phone number.</inlineHelpText>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>