force-app/main/default/objects/EI_Space_Location__c/fields/Premise_EI__c.field-meta.xml
<CustomField>
    <fullName>Premise_EI__c</fullName>
    <description>Parent of the space or location.</description>
    <inlineHelpText>Parent of the space or location.</inlineHelpText>
    <label>Premise</label>
    <referenceTo>EI_PREMISE__c</referenceTo>
    <relationshipName>Spaces_and_Locations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>