force-app/main/default/objects/EI_Space_Location__c/fields/Street_Adr_Line_1_EI__c.field-meta.xml
<CustomField>
    <fullName>Street_Adr_Line_1_EI__c</fullName>
    <description>Location address line 1.</description>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <inlineHelpText>Location address line 1.</inlineHelpText>
    <label>Street Address Line 1</label>
    <length>250</length>
    <type>Text</type>
</CustomField>