force-app/main/default/objects/EI_Space_Location__c/fields/Street_Adr_Line_2_EI__c.field-meta.xml
<CustomField>
    <fullName>Street_Adr_Line_2_EI__c</fullName>
    <description>Street Address Line 2.</description>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <inlineHelpText>Street Address Line 2.</inlineHelpText>
    <label>Street Address Line 2</label>
    <length>250</length>
    <type>Text</type>
</CustomField>