force-app/main/default/objects/EI_Space_Location__c/fields/Zip_Code_EI__c.field-meta.xml
<CustomField>
    <fullName>Zip_Code_EI__c</fullName>
    <description>Zip code of the space / location.</description>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <inlineHelpText>Zip code of the space / location.</inlineHelpText>
    <label>Zip Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>