force-app/main/default/objects/EI_Space_Location__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Street_Adr_Line_1_EI__c</columns>
    <columns>Street_Adr_Line_2_EI__c</columns>
    <columns>City_EI__c</columns>
    <columns>Zip_Code_EI__c</columns>
    <columns>Contact_First_Name_EI__c</columns>
    <columns>Contact_Last_Name_EI__c</columns>
    <columns>Care_Enrolled_EI__c</columns>
    <columns>Last_Treated_Date_EI__c</columns>
    <columns>ExternalID_EI__c</columns>
    <columns>EI_Old_Id_DM__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>